...

    <!--Utilities-->
    <string name="hashCodeMultiplier">31</string>
    <string name="toggleRank">0</string>

    <!--Hestia dialogs-->
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="collectionHint">Collection</string>
    <string name="pluginHint">Plugin</string>
    <string name="ipHint">IP (e.g. 127.0.0.1)</string>
    <string name="default_port">8000</string>

...
    <string name="loginText">Login</string>
    <string name="passHint">Password</string>
    <string name="userHint">Username</string>
    <string name="rememberMeText">Remember me:</string>
    <string name="attemptsLeftText">Attempts Left:</string>
    <string name="loginPrefs">LoginPreferences</string>
    <string name="loginPrefsUser">username</string>
    <string name="loginPrefsPass">password</string>
    <string name="standardUser">admin</string>
    <string name="standardPass">password</string>
    <string name="correctLoginToast">Correct, redirecting."</string>
    <string name="incorrectLoginToast">Invalid credentials.</string>
    <string name="saveLogin">savelogin</string>
    <string name="incorr_ip">"Invalid IP"</string>

    <!--Changing credentials-->
    <string name="oldPassHint">Old password</string>
    <string name="newPassHint">New password</string>
    <string name="newPassCheckHint">New password again</string>
    <string name="newUserHint">New username</string>
...
    <string name="userSet">Username changed </string>

    <!-- Changing device name-->
    <string name="cancelNameChange">Name of the device was not changed</string>

    <!-- Menu items text-->
    <string name="logout">Logout</string>
    <string name="changeUserPass">Change user/pass</string>
    <string name="login">login</string>
    <string name="logoutExtraValue">logout</string>
    <string name="fixedFieldCol">collection</string>
    <string name="fixedFieldPlugin">plugin</string>

    <!-- Server discovery-->
...
