...
        android:layout_below="@+id/password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <CheckBox
        android:id="@+id/rememberButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignTop="@+id/textView2"
        android:layout_toEndOf="@+id/textview"
        android:layout_toRightOf="@+id/loginButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attemptsLeftText"
        android:id="@+id/textView3"
...
        android:layout_alignStart="@+id/textview" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server"
        android:id="@+id/setServerButton"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="false" />
        />
</RelativeLayout>
