<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/context_menu"
        android:title="Context menu"
        android:icon="@drawable/ic_action"
        android:orderInCategory="100"
        app:showAsAction="always">

    </item>
...
