...
    android:orientation="vertical"
    android:padding="8dp">

    <EditText
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:id = "@+id/newUser"
        android:hint = "@string/newUserHint"
        android:focusable = "true"
        android:textColorHint = "@color/hint"
        android:textSize="20sp"
        android:maxLines="1"
        android:inputType="text"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newPass"
        android:textSize="20sp"
        android:textColorHint="@color/hint"
        android:hint="@string/newPassHint"
        android:maxLines="1"
        android:inputType="textPassword"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newPassCheck"
        android:textSize="20sp"
        android:textColorHint="@color/hint"
        android:hint="@string/newPassCheckHint"
        android:maxLines="1"
        android:inputType="textPassword"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/oldPass"
        android:textSize="20sp"
        android:textColorHint="@color/hint"
        android:hint="@string/oldPassHint"
        android:maxLines="1"
        android:inputType="textPassword"
        />
...
